feat: add crud for admin/case
